kubernetes/main/apps/flux-system/flux-operator/instance/github/webhook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
spec:
  ingressClassName: external
  rules:
    - host: flux-webhook.${domain}
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
